[Fix] : application 설정파일 분리

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,38 +1,14 @@
 spring:
   profiles:
     active: dev
+    include: oauth2
+
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
     url: jdbc:mariadb://127.0.0.1:3306/gram__dev?useUnicode=true&characterEncoding=utf8&autoReconnect=true&serverTimezone=Asia/Seoul
     username: root
     password:
-  security:
-    oauth2:
-      client:
-        registration:
-          google:
-            client-id: 679995282720-p2pd0mjes8tics40sq6cat1is6me092u.apps.googleusercontent.com
-            client-secret: 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
-            scope:
-            client-name: Google
-            authorization-grant-type: authorization_code
-#            redirect-uri: http://localhost:8080/login/oauth2/code/kakao
-            client-authentication-method: POST
-            provider-uri:
 
-          kakao:
-            clientId: 622130385bc3c249f8b2da61aac37908
-            scope:
-            client-name: Kakao
-            authorization-grant-type: authorization_code
-            redirect-uri: http://localhost:8080/login/oauth2/code/kakao
-            client-authentication-method: POST
-        provider:
-          kakao:
-            authorization-uri: https://kauth.kakao.com/oauth/authorize
-            token-uri: https://kauth.kakao.com/oauth/token
-            user-info-uri: https://kapi.kakao.com/v2/user/me
-            user-name-attribute: id
   jpa:
     hibernate:
       ddl-auto: create
